--- a/wrr/styles/site-plan-rafting.css
+++ b/wrr/styles/site-plan-rafting.css
@@ -6,14 +6,14 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
+  --primary-color: #120E02   ;
+  --secondary-color: #251D04 ;
+  --accent1-color: #B83A14;
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: Luminari;
+  --paragraph-font: "Andale Mono", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
